--- a/DC-VFX_renderman_denoiser_v01.ui
+++ b/DC-VFX_renderman_denoiser_v01.ui
@@ -35,7 +35,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap>images/logo.png</pixmap>
+         <pixmap>images/logo3.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
